objects/DFR_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOL__c</fullName>
        <label>EOL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry__c</fullName>
        <label>Inquiry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <label>MQL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAL__c</fullName>
        <label>SAL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL__c</fullName>
        <label>SQL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Field mapping of source field and destination field between Lead/Contact and DFR records for different stages of the funnel.</description>
    <label>DFR Field Mapping</label>
</CustomObject>